[package]
name = "whirlpool"
version = "0.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpool"
test = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["no-idl"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0" }
anchor-spl = { version = "0.31.0", features = ["metadata", "memo"] }
spl-transfer-hook-interface = { version = "0.9.0" }
spl-token-metadata-interface = { version = "0.6.0" }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
solana-program = "~2.1.0"
thiserror = "1.0"
uint = { version = "0.9.1", default-features = false }
borsh = "0.10.3"
mpl-token-metadata = { version = "5.1.1", features = ["serde"] }
borsh09 = { package = "borsh", version = "=0.9.3" }
arrayref = { version = "0.3.8" }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
indexmap = "2.2.6"

[dev-dependencies]
proptest = "1.0"
serde = "1.0.117"
serde_json = "1.0.59"

[dev-dependencies.serde_with]
version = "1.12.0"
features = ["json"]
